--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
 body {
-  background-color: black;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
 
 body h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
 .user-item {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
   margin: 10px;
   padding: 10px;
   background-color: rgb(0, 90, 163);
   border-radius: 5px;
   color: white;
   list-style-type: none;
-
+  width: 700px;
+  transition: 0.4s;
 }
 
+.user-item:hover {
+  cursor: pointer;
+  background-color: rgb(0, 55, 89);
+  transition: 0.4s;
+}
